[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "depthview"
description = "depth npy file viewer"
readme = "README.md"
version = "0.0.1"
authors = [
    {name = "katsunori-waragai", email="waragai.katsunori@borgroid.co.jp"},
    {name = "zhang chao", email = "zhang.chao@borgroid.co.jp"},
]

requires-python = ">= 3.8"

dependencies = [
    "numpy<2",
    "opencv-python==3.4.18.65",
    "open3d",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
[project.scripts]
depth_viewer = "depthview.depth_viewer:main"
zed_capture = "depthview.zed_capture:main"

[project.urls]
Repository = "https://github.com/katsunori-waragai/depth-view"

[tool.setuptools]
packages = ["depthview"]

[tool.black]
line-length = 80
