[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "disparirtyview"
description = "depth npy file viewer"
readme = "README.md"
version = "0.0.1"
authors = [
    {name = "katsunori-waragai", email="waragai.katsunori@borgroid.co.jp"},
    {name = "zhang chao", email = "zhang.chao@borgroid.co.jp"},
]

requires-python = ">= 3.8"

dependencies = [
    "dataclasses_json",
    "numpy<2",
    "opencv-python==3.4.18.65",
    "open3d",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]
[project.scripts]
disparity_viewer = "disparirtyview.disparity_view:disparity_viewer_main"
zed_capture = "disparirtyview.zed_capture:main"

[project.urls]
Repository = "https://github.com/katsunori-waragai/depth-view"

[tool.setuptools]
packages = ["disparirtyview"]

[tool.black]
line-length = 120
